shuaib-zulkarnain-24341205/Task 2/ros2_ws/log/build_2025-07-13_14-35-50/turtle_control/stderr.log
  File "/home/hp/ros2_ws/install/turtle_control/lib/python3.10/site-packages/turtle_control/figure8_driver.py", line 5
    from rclpy.node import Node+
                               ^
SyntaxError: invalid syntax

